--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body{
     font-size: 16px;
 }
  
-  h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5{
     font-family: 'Marcellus', serif;
 }
 
@@ -77,10 +77,10 @@ nav{
 }.logo{
       background-color: #333333;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
       padding: 1rem;
-}.slider img{
+}.carru img{
       width: 100%;
       height: 100%;
 }.contenido{
@@ -88,13 +88,13 @@ nav{
       height: 100%;
       overflow: hidden;
       position: relative;
-}#textosl p{
-      position: absolute;
-      top: 64%;
-      font-family: 'Marcellus', serif;
-      font-size: 3rem;
+}#texl p{
       background-color: rgba(29, 21, 21, 0.158);
       color: white;
+      position: absolute;
+      top: 65%;
+      font-family: 'Marcellus', serif;
+      font-size: 3rem;
       width: 100%;
       height: 180px;
       display: flex;
@@ -102,7 +102,7 @@ nav{
       align-items: center;
       flex-flow: row wrap;
 
-}.informacion{
+}.info{
       width: 100%;
       height: 100%;  
       display: flex;
@@ -113,19 +113,17 @@ nav{
       display: flex;
       justify-content: space-around;
       align-items: center;
-}#hijo1{
+}#p1{
       font-size: 1.1em;
       width: 45%;
-}#hijo img{
+}#img2 img{
       width: 65%;
       height: 65%;
-}#hijo{     
+
+}.titu h1{
       display: flex;
       justify-content: center;
-}.tit h1{
-      display: flex;
-      justify-content: center;
-      margin-top: 3%;
+      margin-top: 2%;
       font-size: 3em;
 }.mapa {
       display: flex;
@@ -134,7 +132,6 @@ nav{
 }.mapa iframe{
       width: 100%;
 }.inf h3{
-
       font-size: 1.5em;
       display: flex;
       justify-content: center;
@@ -148,15 +145,15 @@ nav{
       height: 0.1em;
       
 }.inf{
-      padding: 2em;
- }.titulo{
+      padding: 3em;
+ }.titul{
       display: flex;
       justify-content: center;
       background-color: var(--negro);
       align-items: center;
       color: white;
       height: 7em;
- }.titulo h1{
+ }.titul h1{
       margin-bottom: 2%;
  }.footer-container{
       background-color: var(--negro);
@@ -171,7 +168,7 @@ nav{
       height: 9rem;
       
 }
-.text.t{
+.text1{
       width: 25%;
 
       
@@ -185,7 +182,7 @@ nav{
       display:flex;
       padding: 2%;
       
-}.text t3 {
+}.text3 {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -193,23 +190,37 @@ nav{
       padding: 2%;
       
       
-}#separador{
+}#separar{
       margin-top: 21%;
 }.red{
       display: flex;
       justify-content: space-between;
       width: 35%;
       padding: 2%;
-}.carrusel {
+}.carrul {
       display: flex;
       justify-content: space-around;
      width: 100%;
-}.carrusel img{
+}.carrul img{
+      display: flex;
+      justify-content: flex-start;
+      width: 15%;
+      height: 10%;
+      margin-left: 5%;
+      margin-top: 2%;
       border-radius: 50%;
-}#op{
+}
+.carrul h5{
+      display: flex;
+      justify-content: flex-end;
+      width: 60%;
+      height: 65%;
+
+}#opi{
       background: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
       background-size: cover;
       color: white;
       width: 25%;
+      height: 20%;
       
 }
